--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "..\\..\\..\\..\\AppData\\Local\\Temp\\hugo_cache\\modules\\filecache\\modules\\pkg\\mod\\github.com\\twbs\\bootstrap@v5.1.1+incompatible\\js\\*"
+    "../../../../../var/folders/jn/g91v7l7j2_n83kyhh038w7ch0000gq/T/hugo_cache/modules/filecache/modules/pkg/mod/github.com/twbs/bootstrap@v5.1.1+incompatible/js/*"
    ]
   }
  }
