--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ timeout = 200000
 page = [ "HTML" ]
 home = [ "HTML" ]
 section = [ "HTML" ]
-taxonomy = [ "HTML", "RSS", "JSON" ]
+taxonomy = [ "HTML", "RSS" ]
 term = [ "HTML" ]
 
 
