--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://www.bizone.org"
 languageCode = "en"
 defaultContentLanguage = "en"
 title = "Bisexuality-Aware Professionals Directory"
