--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 
 ### Dependency directories ###
 node_modules/
+
+### Things we copy in for the Docker build process ###
+/ResourceUtils/
+/scrolloserver/
