--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"autoprefixer": "^9.7.6",
 		"fs-extra": "^8.1.0",
 		"js-yaml": "^3.14.1",
+		"postcss": "^8.5.3",
 		"postcss-cli": "^10.0.0",
 		"prompts": "^2.4.1",
 		"toml": "^3.0.0",
