--- a/data/entries.yaml
+++ b/data/entries.yaml
@@ -562,35 +562,6 @@ entries:
         countries: US
         regions: MA
         last_update: "2025-08-27"
-    - path: 9_alan-turin_-1
-      fields:
-        title: Alan Turin - Psychotherapists - Licensed from US-NH
-        id: 9
-        salutation: ""
-        first_name: Alan
-        last_name: Turin
-        credentials: ""
-        job_title: PhD
-        company: ""
-        short_desc: 'Licensed Psychologist - MA License # 1975'
-        phone: 978-258-3474
-        address: (North of Boston) &nbsp; 145 Maple St. &nbsp; Methuen, MA 01844
-        email: aturin@aol.com
-        email2: ""
-        website: http://www.dralanturin.com
-        website2: ""
-        fees: $100.00
-        description: |-
-            Caring, compassionate, skilled, professional, kink-aware help for individuals (adult) and
-            couples. Licensed in Massachusetts for 20+ years. I'm non-judgmental, respectful and supportive. I succeed when you feel good about our work and the self-growth and comfortable options that emerge from it. I am listed in the Kink Aware and Poly Friendly Professionals directories, and I am the Past president of the New England Society of Clinical Hypnosis as well as the Past president and cofounder of the Biofeedback Society of Massachusetts.
-        categories: Psychotherapists - Licensed
-        location: US-NH (New Hampshire)
-        locations:
-            - US-MA (Massachusetts)
-            - US-NH (New Hampshire)
-        countries: US
-        regions: NH
-        last_update: "2025-08-27"
     - path: 10_roger-l-worthington
       fields:
         title: Roger L. Worthington - Psychotherapists - Licensed from US-MO
@@ -2257,50 +2228,6 @@ entries:
         countries: US
         regions: All
         last_update: "2025-08-27"
-    - path: 65_loraine-hutchins_-1
-      fields:
-        title: Loraine Hutchins - Educators from US-MD
-        id: 65
-        salutation: ""
-        first_name: Loraine
-        last_name: Hutchins
-        credentials: ""
-        job_title: Author/Lecturer
-        company: ""
-        short_desc: Also Sex Educator/ Sex Coach. Erotic Spirits Institute, Director. Ph.D. in Cultural Studies. Also studied with Betty Dodson, Joseph Kramer, Jack Painter, Annie Sprinkle, Carol Queen, Deborah Anapol and others.
-        phone: 301/650-9058
-        address: 805 Maplewood Ave., Takoma Park, MD  20912
-        email: wonderwoman@igc.org
-        email2: rain@lorainehutchins.com
-        website: http://www.lorainehutchins.com
-        website2: ""
-        fees: contact me for more info on fees
-        description: |-
-            I offer a variety of speechs and workshops (see website) and am available for guest teaching
-            and guest lecturing.  My self-published doctoral dissertation on contempoary U.S. sacred sexualities is available through my website, which also includes other samples of my writings, including the much-beloved 1991 anthology, Bi Any Other Name: Bisexual People Speak
-            Out, named one of the top 100 queer books of the last century, which I
-            co-edited with Lani Ka-ahumanu.
-
-
-
-
-
-            I also work as a sex coach and sex educator, particularly with women,
-            older people, fat people, lesbian/gay/bisexual/transgender and intersex
-            people, and those living with disabilities.  I work with a wide range of
-            communities including those in intentional spiritual communities or
-            practices, those identifying as polyamorous (loving more than one, openly
-            & honestly) and those with BDSM/leather affinities.  My sex coaching
-            services -- patterned after Dodson (<a href="http://www.bettydodson.com">www.bettydodson.com</a>) and Kramer (<a href="http://www.erospirit.org">www.erospirit.org</a>) -- help you improve your self-pleasuring capacity and
-            use that capacity to empower your whole life.
-        categories: Educators
-        location: US-MD (Maryland)
-        locations:
-            - US-All (Nationwide)
-            - US-MD (Maryland)
-        countries: US
-        regions: MD
-        last_update: "2025-08-27"
     - path: 66_arlene-istar-lev
       fields:
         title: Arlene Istar Lev - Psychotherapists - Licensed from US-NY
@@ -2764,80 +2691,6 @@ entries:
             - US-MA (Massachusetts)
         countries: US
         regions: MA
-        last_update: "2025-08-17"
-    - path: 78_geri-d-weitzman
-      fields:
-        title: Geri D. Weitzman - Educators from US-All
-        id: 78
-        salutation: ""
-        first_name: Geri D.
-        last_name: Weitzman
-        credentials: ""
-        job_title: PhD
-        company: ""
-        short_desc: 'Licensed Psychologist - CA License # PSY17963 - Workshop presenter / educator on Bisexual, LGBT, and Polyamory concerns.'
-        phone: 415-517-7965
-        address: 1100 Sanchez Street (corner of 24th), San Francisco, CA 94114
-        email: gdw@numenor.org
-        email2: ""
-        website: http://www.numenor.org/~gdw/psychologist
-        website2: ""
-        fees: See below
-        description: |-
-            **Workshops and lectures I have given include:**
-
-            <ul type="disc">
-            <li>**What Therapists Should Know About Working with Bisexual Clients**
-            <ul type="circle"><li>How is being bisexual different from being gay or lesbian? What are some specific concerns that bisexuals face? How can a counselor take these issues into account so as to be supportive to their bisexual clients?</li></ul>
-            </li>
-
-
-
-            <li>**When Someone You Know Is Lesbian, Gay or Bisexual**
-            <ul type="circle"><li>It is estimated that one out of every ten people is lesbian, gay, or bisexual. Today more and more gay people are finding it possible to come out to their friends, families and co-workers. Come join an open discussion about perceptions of lesbians, gays and bisexuals in society. We will examine stereotypes, explore homophobia, and talk about what it feels like to be different from others. </li></ul>
-            </li>
-
-
-
-            <li>**What Psychology Professionals Should Know About Polyamory: The Lifestyles and Mental Health Concerns of Polyamorous Individuals.**
-            <ul type="circle">
-            <li>Polyamory is a lifestyle in which romantic partners agree that they may each have romantic relationships with other people as well. It is distinguished from infidelity by the presence of honest, supportive communication between partners and lovers about the existence of each of these relationships in their lives. This workshop talks about some of the unique concerns that polyamorous people face, and the ways in which a therapist can be supportive of and helpful to their polyamorous clients.</li></ul>
-            </li>
-
-
-
-            <li>**Coming Out Issues Workshop**
-            <ul type="circle">
-            <li>Lesbians, gays and bisexuals are frequently faced with the decision of whether to come out to their friends, families, and co-workers. Coming out can be associated with both benefits and risks. In this workshop, we will talk about how one might make the decision to come out and about ways of coming out to the people in one's life. We will also talk about community resources that can offer support as these choices are made.</li></ul>
-            </li>
-
-
-
-            <li>**Bi-Gay Dialogue: Are We Family?**
-            <ul type="circle">
-            <li>There have historically been rifts between the bisexual and gay communities. This workshop will examine the sources of those rifts. We will discuss experiences that these two communities have in common, and what each experiences distinctly. It is hoped that the discussion will foster a sense of support and understanding between the two communities. All are welcome to attend.</li></ul>
-            </li>
-
-
-            <li>**Other workshops / lectures can be custom-created to fit the particular needs of your organization.**</li>
-            </ul>
-
-
-
-            **Workshop/Lecture Fees:**
-            <ul type="disc">(Sliding scale offered for non-profit organizations) I charge $100 per hour of presentation time and $40 per hour of travel time (up to a maximum of 8 hours in a given day), plus travel and lodging expenses as applicable. For instance, a two hour lecture in San Francisco would cost $240: 2 hours of lecture at $100 each, plus a half hour each way from my home in San Mateo county (2x20). A two hour lecture in New York would cost $840 plus travel/lodging expenses: 2 hours of lecture at $100 each, 8 hours of travel time each way (16x40 = $640), plus airfare and overnight lodging accomodations.
-            </ul>
-
-
-
-            **More about me:**
-            <ul type="disc">I am an openly bisexual psychologist, practicing in San Francisco (Noe Valley neighborhood). I have experience working within the Bisexual, Lesbian, Gay, Polyamory, Kink/BDSM, HIV+/POZ, and DD communities. My other specialties include relationship work, career counseling, managing depression, anxiety, anger, substance and internet addictions, codependency, and self-acceptance. I am the coordinator of the <a href="http://www.bizone.org/bap">Bisexuality-Aware Professionals Directory</a>, and the author of <a href="http://www.polyamory.org/~joe/polypaper.htm">What Psychology Professionals Should Know About Polyamory</a>.</ul>
-        categories: Educators
-        location: US-All (Nationwide)
-        locations:
-            - US-All (Nationwide)
-        countries: US
-        regions: All
         last_update: "2025-08-17"
     - path: 82_dr-joseph-chikelue-obi
       fields:
@@ -6517,7 +6370,7 @@ entries:
         first_name: Kathyrn Kemp
         last_name: Chociej
         credentials: ""
-        job_title: '&#8203;Therapist / Coach'
+        job_title: Therapist / Coach
         company: ""
         short_desc: |-
             &#8203;Social Worker Associate Independent Clinical License Issued by the Washington State Department of Health by the authority of RCW 18.225, License SC 60401573.
@@ -6566,7 +6419,7 @@ entries:
             - US-WA (Washington)
         countries: US
         regions: WA
-        last_update: "2025-08-17"
+        last_update: "2025-09-21"
     - path: 256_taryn-carwyn
       fields:
         title: Taryn Carwyn - Psychotherapists - Licensed from US-CO
@@ -12998,4 +12851,35 @@ entries:
         countries: US
         regions: NY
         last_update: "2025-08-17"
+    - path: 827_sara-beth-clayton_heartspace-therapy
+      fields:
+        title: Sara Beth Clayton MHC-LP - Psychotherapists - Licensed from US-NY
+        id: 827
+        salutation: ""
+        first_name: Sara Beth
+        last_name: Clayton
+        credentials: MHC-LP
+        job_title: Psychotherapist
+        company: Heartspace Therapy
+        short_desc: 'MA, MEd, MHC-LP ( NYS Limited Permit #136922, Supervisor: Daniel Spence, NYS License #:015083)'
+        phone: (347) 766-1674
+        address: 138 W 25th St Ste 802, Office B6, New York, NY 1001, USA
+        email: sarabeth@heartspace-therapy.com
+        email2: ""
+        website: https://www.heartspace-therapy.com/sarabeth
+        website2: ""
+        fees: $155 for individual sessions, $205 for relationship sessions. Sliding scale available. OON with all insurances.
+        description: |-
+            Specialties: Sexuality and Gender Affirming Therapy, Shame, Poly/CNM, Kink/BDSM, Religious Trauma, Liberation Therapy
+
+            Language: English
+
+            Populations served: Adults, individuals, couples, polycules, and groups
+        categories: Psychotherapists - Licensed
+        location: US-NY (New York)
+        locations:
+            - US-NY (New York)
+        countries: US
+        regions: NY
+        last_update: "2025-09-16"
 
