add locations into the mix

--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,7 +3,7 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "../_vendor/github.com/twbs/bootstrap/js/*"
+    "..\\_vendor\\github.com\\twbs\\bootstrap\\js\\*"
    ]
   }
  }
